# photo_gen

./: .env.example  .gitignore  CLAUDE.md  EXECUTION_PLAN.md  FEATURE_SPEC.md  README.md  main.py  pyproject.toml
graph/: nodes.py  state.py  workflow.py
scenes/: config.json
services/: composite_service.py  depth_service.py  face_service.py  generation_service.py
static/: app.js  index.html  style.css
